# GenWKT

./: .gitignore  GenWKT.spec  README.md  build.py  gui.py  logic.py  main.py  pyproject.toml  temp_method.py  test_import.py  test_solver.py
src/config/: loader.py
src/core/: converter.py  estimator.py  logger.py
src/gui/: main_window.py
src/gui/styles/: dark_theme.qss  emerald.qss  oceanic.qss  sunset.qss
src/gui/widgets/: coords_widget.py  map_widget.py  projection_widget.py  results_widget.py  settings_widget.py  wkt_converter_widget.py
tests/: conftest.py  debug_geoid.py  debug_geoid_v2.py  debug_pipeline.py  debug_pipeline_inv.py  debug_proj.py  inspect_crs.py  test_geoid.py  test_gui.py  test_gui_wkt.py  test_logic.py  test_new_logic.py  test_projection_estimation.py  test_wkt_converter.py
